use logo from template

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <body>
         <header>
             <nav id="project-id">
-                <a href="/">{% if data.logo %}<img src="{{ data.logo }}" alt="Vem logo">{% endif %} {{ data.project }}</a>
+                <a href="/">{% if data.logo %}<img src="{{ data.logo }}" alt="Logo">{% endif %} {{ data.project }}</a>
             </nav>
             <nav id="main-menu-desktop">
                 {% for item in data.main_menu %}
