--- a/themes/PaperMod/layouts/partials/templates/schema_json.html
+++ b/themes/PaperMod/layouts/partials/templates/schema_json.html
@@ -2,7 +2,7 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "{{- ( .Site.Params.schema.publisherType | default "Organization") | humanize -}}",
+  "@type": "{{- ( .Site.Params.schema.publisherType | default "Organization") | title -}}",
   "name": {{ .Site.Title }},
   "url": {{ .Site.BaseURL }},
   "description": {{ .Site.Params.description | plainify | truncate 180 | safeHTML }},
@@ -19,7 +19,7 @@
 {{- else if (or .IsPage .IsSection) }}
 {{/* BreadcrumbList */}}
 {{- $url := replace .Parent.Permalink ( printf "%s" .Site.BaseURL) "" }}
-{{- $lang_url := replace $url ( printf "%s" .Lang) "" }}
+{{- $lang_url := strings.TrimPrefix ( printf "%s/" .Lang) $url }}
 {{- $bc_list := (split $lang_url "/")}}
 
 {{- $scratch := newScratch }}
@@ -45,7 +45,7 @@
 
   {{- end }}
   {{- /*  self-page addition  */ -}}
-  {{- if $bc_list }}, {{end }}
+  {{- if (ge (len $bc_list) 2) }}, {{end }}
     {
       "@type": "ListItem",
       "position": {{len $bc_list}},
@@ -62,7 +62,7 @@
   "@type": "BlogPosting",
   "headline": {{ .Title | plainify}},
   "name": "{{ .Title | plainify }}",
-  "description": {{ .Summary | plainify | truncate 180 | safeHTML }},
+  "description": {{ with .Description | plainify }}{{ . }}{{ else }}{{ .Summary | plainify  }}{{ end -}},
   "keywords": [
     {{- if .Params.keywords }}
     {{ range $i, $e := .Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}
@@ -105,7 +105,7 @@
     "@id": {{ .Permalink | safeHTML }}
   },
   "publisher": {
-    "@type": "{{- ( .Site.Params.schema.publisherType | default "Organization") | humanize -}}",
+    "@type": "{{- ( .Site.Params.schema.publisherType | default "Organization") | title -}}",
     "name": {{ .Site.Title }},
     "logo": {
       "@type": "ImageObject",
@@ -114,6 +114,6 @@
   }
 }
 </script>
-{{ end }}{{/* .IsPage end */}}
+{{- end }}{{/* .IsPage end */}}
 
-{{ end }}
+{{- end -}}
