--- a/layouts/partials/connect_buttons.html
+++ b/layouts/partials/connect_buttons.html
@@ -1,10 +1,10 @@
 {{- $title := .Title }}
 
 <div class="sharebox">
-  <div class="shareboxtitleleft"><strong>Connect  <i class="fa fa-user-friends"></i></strong></div>
+  <div class="shareboxtitleleft"><span><strong class="hide-small">Connect  </strong><i class="fa fa-user-friends" title="Connect"></i></span></div>
   <div class="sharebox-buttons">
       {{- if .Params.connect.twitter}}
-      <a target="_blank" rel="noopener noreferrer" aria-label="connect on twitter"
+      <a target="_blank" rel="noopener noreferrer" aria-label="connect on twitter" title="connect on twitter"
           href="{{.Params.connect.twitter}}">
           <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
               <path
@@ -13,7 +13,7 @@
       </a>
       {{- end }}
       {{- if .Params.connect.linkedin}}
-      <a target="_blank" rel="noopener noreferrer" aria-label="connect on linkedin"
+      <a target="_blank" rel="noopener noreferrer" aria-label="connect on linkedin" title="connect on linkedin"
           href="{{.Params.connect.linkedin}}">
           <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
               <path
@@ -22,7 +22,7 @@
       </a>
       {{- end }}
       {{- if .Params.connect.reddit}}
-      <a target="_blank" rel="noopener noreferrer" aria-label="connect on reddit"
+      <a target="_blank" rel="noopener noreferrer" aria-label="connect on reddit" title="connect on reddit"
           href="{{.Params.connect.reddit}}">
           <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
               <path
@@ -31,7 +31,7 @@
       </a>
       {{- end }}
       {{- if .Params.connect.facebook}}
-      <a target="_blank" rel="noopener noreferrer" aria-label="connect on facebook"
+      <a target="_blank" rel="noopener noreferrer" aria-label="connect on facebook" title="connect on facebook"
           href="{{.Params.connect.facebook}}">
           <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
               <path
@@ -40,7 +40,7 @@
       </a>
       {{- end }}
       {{- if .Params.connect.github}}
-      <a target="_blank" rel="noopener noreferrer" aria-label="comment {{ $title | plainify }} on github"
+      <a target="_blank" rel="noopener noreferrer" aria-label="comment {{ $title | plainify }} on github" title="comment {{ $title | plainify }} on github"
           href="{{.Params.connect.github}}">
           <svg version="1.1" viewBox="0 0 512 512" xml:space="preserve">
               <path
@@ -49,5 +49,5 @@
       </a>
       {{- end }}
   </div>
-  <div class="shareboxtitleright"><strong><i class="fa fa-user-friends fa-flip-horizontal"></i>  Connect</strong></div>
+  <div class="shareboxtitleright"><span><i class="fa fa-user-friends fa-flip-horizontal" title="Connect"></i><strong class="hide-small">  Connect</strong></span></div>
 </div>
