add gh sponsor in footer

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -1,5 +1,10 @@
+{{- /* Footer custom content area start */ -}}
 <footer class="footer">
-  <span>
+  <div>
+    <iframe src="https://github.com/sponsors/iwilltry42/card" title="Sponsor iwilltry42" height="225" width="600" style="border: 0;"></iframe>
+  </div>
+  <div>
     <a href="/legal">Legal Notice</a>
-  </span>
+  </div>
 </footer>
+{{- /* Footer custom content area end */ -}}
