--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -4,6 +4,13 @@
     <iframe src="https://github.com/sponsors/iwilltry42/card" title="Sponsor iwilltry42" height="225" width="600" style="border: 0;"></iframe>
   </div>
   <div>
+    <script src="https://liberapay.com/iwilltry42/widgets/button.js"></script>
+    <noscript><a href="https://liberapay.com/iwilltry42/donate"><img alt="Donate using Liberapay" src="https://liberapay.com/assets/widgets/donate.svg"></a></noscript>
+  </div>
+  <div>
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="thklein" data-color="#FFDD00" data-emoji=""  data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+  </div>
+  <div>
     <a href="/legal">Legal Notice</a>
   </div>
 </footer>
