git subrepo pull themes/hugo-PaperMod
subrepo:
  subdir:   "themes/hugo-PaperMod"
  merged:   "2552b6d"
upstream:
  origin:   "git@github.com:iwilltry42/hugo-PaperMod.git"
  branch:   "main"
  commit:   "2552b6d"
git-subrepo:
  version:  "0.4.3"
  origin:   "ssh://git@github.com/ingydotnet/git-subrepo.git"
  commit:   "2f68596"

--- a/themes/hugo-PaperMod/layouts/_default/single.html
+++ b/themes/hugo-PaperMod/layouts/_default/single.html
@@ -48,6 +48,15 @@
     {{- if (and site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
     {{- partial "share_icons.html" . -}}
     {{- end }}
+    
+    {{- if (ne .Params.disableCommentButtons true) }}
+    {{- partial "comment_buttons.html" . -}}
+    {{- end }}
+
+    {{- if (ne .Params.disableConnectButtons true) }}
+    {{- partial "connect_buttons.html" . -}}
+    {{- end }}
+    
   </footer>
 
   {{- if (.Param "comments") }}
