--- a/themes/hugo-PaperMod/layouts/_default/list.html
+++ b/themes/hugo-PaperMod/layouts/_default/list.html
@@ -72,7 +72,18 @@
   {{- if (ne (.Param "hideSummary") true) }}
   <div class="entry-content">
     <p>{{ .Summary | plainify | htmlUnescape }}{{ if .Truncated }}...{{ end }}</p>
-  </div>
+  </section>
+  {{- /* 
+    CUSTOMIZATION 
+    - param "hideDescription" can be set to false to alternatively show the description instead of the summary 
+  */ -}}
+  {{- else }}
+  {{- if (ne (.Param "hideDescription") true) }}
+  <section class="entry-content">
+    <p>{{ .Description | plainify | htmlUnescape }}</p>
+  </section>
+  {{- end }}
+  {{- /* END CUSTOMIZATION */ -}}
   {{- end }}
   {{- if not (.Param "hideMeta") }}
   <footer class="entry-footer">
