git subrepo pull themes/hugo-PaperMod
subrepo:
  subdir:   "themes/hugo-PaperMod"
  merged:   "b52e9a6"
upstream:
  origin:   "git@github.com:iwilltry42/hugo-PaperMod.git"
  branch:   "main"
  commit:   "b52e9a6"
git-subrepo:
  version:  "0.4.3"
  origin:   "ssh://git@github.com/ingydotnet/git-subrepo.git"
  commit:   "2f68596"

--- a/themes/hugo-PaperMod/layouts/partials/head.html
+++ b/themes/hugo-PaperMod/layouts/partials/head.html
@@ -51,6 +51,7 @@
 {{- $media := (resources.Get "css/core/zmedia.css") }}
 {{- $license_css := (resources.Get "css/core/license.css") }}
 {{- $common := (resources.Match "css/common/*.css") | resources.Concat "assets/css/common.css" }}
+{{- $iwilltry42 := (resources.Match "css/iwilltry42/*.css") | resources.Concat "assets/css/iwilltry42.css" }}
 
 {{- /* include `an-old-hope` if hljs is on */}}
 {{- $isHLJSdisabled := (site.Params.assets.disableHLJS | default false) }}
@@ -62,7 +63,7 @@
 
 {{- /* bundle all required css */}}
 {{- /* Add extended css after theme style */ -}}
-{{- $stylesheet := (slice $license_css $core $extended) | resources.Concat "assets/css/stylesheet.css"  }}
+{{- $stylesheet := (slice $license_css $core $iwilltry42 $extended) | resources.Concat "assets/css/stylesheet.css"  }}
 
 {{- if not site.Params.assets.disableFingerprinting }}
 {{- $stylesheet := $stylesheet | fingerprint }}
